[package]
authors = ["Lasm Gratel"]
description = "Convert your music folder into video."
documentation = "https://docs.rs/songstovideo"
edition = "2021"
homepage = "https://github.com/LasmGratel/songstovideo"
license = "MIT"
name = "songstovideo"
readme = "README.md"
repository = "https://github.com/LasmGratel/songstovideo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["cargo"]}

crossbeam = "0.8"
indicatif = "0.17"
rayon = "1"
thiserror = "1"
walkdir = "2"
