[package]
authors = ["Lasm Gratel"]
description = "Convert your music folder into another format, for portable purpose."
documentation = "https://docs.rs/musicsync"
edition = "2021"
homepage = "https://github.com/LasmGratel/musicsync"
license = "MIT"
name = "musicsync"
readme = "README.md"
repository = "https://github.com/LasmGratel/musicsync.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["cargo"]}

crossbeam = "0.8"
indicatif = "0.17"
rayon = "1"
thiserror = "1"
walkdir = "2"
